infrastructure/longhorn/base/ns-longhorn.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system 
spec: {}
status: {}
